fixes cropping of chrome login page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -78,15 +78,16 @@ body {
 #chrome-login {
   margin: auto;
   .login-container {
-    padding: 50px;
+    padding: 20px;
     position: fixed;
     margin: auto;
-    top:0;
+    top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    width: 400px;
-    height: 400px;
+    width: 389px;
+    background-color: #eee;
+    height: 186px;
     h1 {
       margin-bottom: 20px;
     }
